# trajectory_generation

./: BiquadFilter.cpp  BiquadFilter.h  BuildTrajectoryGenerator.m  CMakeLists.txt  CheckConstraintsT.m  Filter.h  FirFilter.cpp  FirFilter.h  LICENSE.md  Logger.cpp  Logger.h  README.md  TrajectoryGenerator.cpp  TrajectoryGenerator.h  biquad_filter.cpp  biquad_filter.h  filter.h  firTest.m  fir_filter.cpp  fir_filter.h  logger.cpp  logger.h  main.cpp  output.txt  scope.py  testTrajectory.m  trajectory_generator.cpp  trajectory_generator.h
